--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
 <a id="what-is-this" class="anchor" href="#what-is-this" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is this?</h2>
 
 <p>This mini CSS project can be viewed here:<br> 
-  [http://lawrenceabaeo.github.io/css-love-live-stage-tvs-background/mogyutto-backdrop/main.html](http://lawrenceabaeo.github.io/css-love-live-stage-tvs-background/mogyutto-backdrop/main.html)</p>
+  <a href="http://lawrenceabaeo.github.io/css-love-live-stage-tvs-background/mogyutto-backdrop/main.html">http://lawrenceabaeo.github.io/css-love-live-stage-tvs-background/mogyutto-backdrop/main.html</a></p>
 
 <p>The output imitates the backdrop of tv screens seen in the Love Live School Idol ‘Mogyutto "love" de Sekkin Chuu!’ Promotional Video (<a href="https://vimeo.com/123603613">click here to see video</a>). Love Live School Idol is a Japanese entertainment franchise about a fictional group of nine high school girls that perform as a group singing ‘School Idols’.</p>
 
 <p>You can download a picture file version of this same webpage here:<br> 
-  [click this to download image file version](http://lawrenceabaeo.github.io/css-love-live-stage-tvs-background/1920x1080%20Stage%20Backdrop%20in%20the%20style%20of%20Love%20Live%20Mogyutto%20"love"%20de%20Sekkin%20Chuu.png)</p>
+  <a href='http://lawrenceabaeo.github.io/css-love-live-stage-tvs-background/1920x1080%20Stage%20Backdrop%20in%20the%20style%20of%20Love%20Live%20Mogyutto%20"love"%20de%20Sekkin%20Chuu.png'>Click here to download picture file</a></p>
 
 <p>Screenshot from the promotional video:<br>
-[http://lawrenceabaeo.github.io/css-love-live-stage-tvs-background/screenshot_from_video.png](http://lawrenceabaeo.github.io/css-love-live-stage-tvs-background/screenshot_from_video.png)</p>
+  <a href'http://lawrenceabaeo.github.io/css-love-live-stage-tvs-background/screenshot_from_video.png'>Click here to see screenshot</a></p>
 
 <h2>
 <a id="features" class="anchor" href="#features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Features</h2>
