Fix links again

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <a href='http://lawrenceabaeo.github.io/css-love-live-stage-tvs-background/1920x1080%20Stage%20Backdrop%20in%20the%20style%20of%20Love%20Live%20Mogyutto%20"love"%20de%20Sekkin%20Chuu.png'>Click here to download picture file</a></p>
 
 <p>Screenshot from the promotional video:<br>
-  <a href'http://lawrenceabaeo.github.io/css-love-live-stage-tvs-background/screenshot_from_video.png'>Click here to see screenshot</a></p>
+  <a href='http://lawrenceabaeo.github.io/css-love-live-stage-tvs-background/screenshot_from_video.png'>Click here to see screenshot</a></p>
 
 <h2>
 <a id="features" class="anchor" href="#features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Features</h2>
