--- a/mogyutto-backdrop/main.html
+++ b/mogyutto-backdrop/main.html
@@ -5,6 +5,8 @@
     <link rel='stylesheet' type='text/css' href='./style.css'>
   </head>
   <body>
+    <div class='over'>
+    </div>
     <div class='main'>
       <div class='my-row'>
         <div class='panel-wrapper p1'><div></div></div>
