--- a/mogyutto-backdrop/main.html
+++ b/mogyutto-backdrop/main.html
@@ -32,7 +32,7 @@
         <div class='panel-wrapper p15'><div></div></div>
         <div class='panel-wrapper p16'><div></div></div>
       </div>
-      <p class='dotted-font'>Love Live</p>
+      <p class='dotted-font'><a href="https://en.wikipedia.org/wiki/Love_Live!" title="Link that goes to the Wikipedia entry for Love Live">Love Live</a></p>
     </div>
   </body>
 </html>
