--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
       </header>
       <section>
         <h1>
-<a id="css-made-love-live-stage-monitor-background" class="anchor" href="#css-made-love-live-stage-monitor-background" aria-hidden="true"><span class="octicon octicon-link"></span></a>CSS-made Love Live Stage Monitor Background</h1>
+<a id="css-made-love-live-stage-monitor-background" class="anchor" href="#css-made-love-live-stage-monitor-background" aria-hidden="true"><span class="octicon octicon-link"></span></a>Make That Background in CSS!</h1>
 
+<p><a href="http://lawrenceabaeo.github.io/css-love-live-stage-tvs-background/mogyutto-backdrop/main.html">Click here to see this project in action!</a></p>
+  
 <h2>
 <a id="what-is-this" class="anchor" href="#what-is-this" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is this?</h2>
 
@@ -39,7 +41,7 @@
 
   <a href="./screenshot_from_video.png" title="link to full sized screenshot file that is taken from the Love Live School Idol Mogyutto video"><img src="./screenshot_from_video_thumb.jpg" alt='thumbnail of screenshot from Love Live School Idol Mogyutto video, showing the led monitors in the background'></a>
 
-<p>This mini CSS project imitates the backdrop of tv screens seen in the Love Live School Idol ‘Mogyutto "love" de Sekkin Chuu!’ Promotional Video (<a href="https://vimeo.com/123603613">click here to see video</a>). Love Live School Idol is a Japanese entertainment franchise about a fictional group of nine high school girls that perform as a group singing ‘School Idols’.</p>
+<p>This mini CSS project copies the backdrop of tv screens seen in the Love Live School Idol ‘Mogyutto "love" de Sekkin Chuu!’ Promotional Video (<a href="https://vimeo.com/123603613">click here to see video</a>). Love Live School Idol is a Japanese entertainment franchise about a fictional group of nine high school girls that perform as a group singing ‘School Idols’.</p>
 
 <p>This project can be viewed here:<br> 
   <a href="http://lawrenceabaeo.github.io/css-love-live-stage-tvs-background/mogyutto-backdrop/main.html">http://lawrenceabaeo.github.io/css-love-live-stage-tvs-background/mogyutto-backdrop/main.html</a></p>
